--- a/Book/클린아키텍처.md
+++ b/Book/클린아키텍처.md
@@ -17,3 +17,6 @@
 아키텍처가 큰 그림을 이야기한다고 해서 세부내용을 이야기하지 않는 것은 아니기때문에 결국 숲을 보느냐 나무를 보느냐 정도로 볼 수 있지 않을 까 생각이 든다. 
 
 이후 
+
+
+##### 2. 벽돌부터 시작하기: 프로그래밍 패러다임 
