--- a/Book/클린아키텍처.md
+++ b/Book/클린아키텍처.md
@@ -4,7 +4,7 @@
 
 나도 아키텍처에대해 궁금증을 가지고 있다. 
 
-이번에 구매한 클린아키텍처라는 책이 내가 생각하고 있는 아키텍처의 방향성을 이야기해줄지는 모르겠지만, 크게 도움이 될 것이라 확신은 하고 있다.
+이번에 구매한 클린아키텍처라는 책이 내가 생각하고 있는 아키텍처의 방향성을 이야기해줄지는 모르겠지만, 시야를 넓히는 데 도움이 될 것이라 본다.
 
 
 
@@ -20,3 +20,18 @@
 
 
 ##### 2. 벽돌부터 시작하기: 프로그래밍 패러다임 
+
+구조적 프로그래밍은 goto문이 해롭기때문에 if/while 과 같은 문을 추가하여 제어흐름에 규칙을 부가하는 것이다. 
+
+객체 지향프로그래밍은 우리가 흔히 사용하는 Java와 같은 것이라고 보면 된다.
+
+함수형 프로그래밍은 Javascript와 같이 함수 중심으로 사용을 하는 프로그래밍이라고 보면 된다.
+
+
+
+| 구분                 | 설명                                        |
+| :------------------- | ------------------------------------------- |
+| 구조적프로그래밍     | 제어흐름의 직접적인 전환에 대해 규칙을 부과 |
+| 겍체 지향 프로그래밍 | 제어흐름의 간접적인 전환에 대해 규칙을 부과 |
+| 함수형 프로그래밍    | 할당문에 대해 규칙을 부과                   |
+
